# MoneyIsEverything

./: .gitignore  .replit  README.md  pyproject.toml  replit.md  server.py  users.db
attached_assets/: Pasted-I-want-to-update-my-Indian-Currency-Detector-project-by-adding-two-new-pages-1-Dashboard-2-Histor-1763185265154_1763185265154.txt  Pasted-UNCERTAIN-2-Confidence-2-Here-s-the-analysis-of-the-provided-image-of-the-Indian-20-Rupee-cu-1763117759703_1763117759704.txt
static/: auth-style.css  dashboard.html  dashboard.js  history.html  history.js  index.html  login.html  register.html  script.js  style.css
